- minor jdk 1.4 cmpiler fixes - fix null pointer exception on presentation